@@ -1,3 +1,5 @@
+#ifndef NTP_CONTROL_H
+#define NTP_CONTROL_H
 /*
  * ntp_control.h - definitions related to NTP mode 6 control messages
  */
@@ -189,4 +191,6 @@ extern struct ctl_trap ctl_traps[CTL_MAXTRAPS];
  */
 #define	IFSTATS_FIELDS	12
 #define	RESLIST_FIELDS	4
+
+#endif /* NTP_CONTROL_H */
 
